cmake_minimum_required(VERSION 3.17)
project(553CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(553CPP main.cpp)
add_executable(a practice/2_1.cpp)
add_executable(b practice/3_11.cpp)
add_executable(c practice/3_12.cpp)
add_executable(d practice/3_13.cpp)
add_executable(e practice/3_16.cpp)
add_executable(f practice/3__7.cpp)
add_executable(g practice/3__8.cpp)
add_executable(h practice/3__9.cpp)
add_executable(i practice/3__10.cpp)
add_executable(j practice/3__12.cpp)
add_executable(k practice/3__13.cpp)
add_executable(l practice/3__14.cpp)
add_executable(m practice/3__15.cpp)
add_executable(n practice/4_1.cpp)
add_executable(o practice/4_2.cpp)